rslashkancolle.css
/* ... */
/* [ C ]. Modules for specific Customization ....... */
/*  visit http://www.reddit.com/r/mindashq/wiki/modules for ready to use add-on modules */


/* -- #M1 - Header Image ---- */

#header,
.res-nightmode #header {
	min-height: 280px; /*Tweak to give a nice height for image to be seen, be conservative*/
	background: #121f31 url('%%headerimg3%%') no-repeat scroll 0px 80% !important; /*Tweak as per requirements*/
}

	#header:after,
	#header-bottom-left:before,
	.bottommenu:before {
		border-color: #3e546a; /*Tweak to match the image color*/
		background-color: #091c2b; /*Tweak to match the image color*/
		background-image: linear-gradient(#091c2b,#020c19);
		opacity: 0.7; /*be creative with usage of shadows, opacity, background color, and even additional background images here*/
	}

#header-bottom-left {
	/*do not change this. positions the top navigation bar*/
	position: absolute;
}

#header ul.tabmenu li a,
#header ul.tabmenu li a:visited,
#header .pagename.redditname,
#header .pagename.redditname.hover,
.footer .flat-vert.title,
#header-img.default-header {
	background: transparent; /*Tweak to match the image color, or keep transparent*/
	background-image: none;
	color: #acd9fc; /*Tweak against background color*/
}

#header ul.tabmenu li.selected a {
	background: #3e546a; /*Tweak to match the background image color*/
	background-image: none;
	color: #ff8254; /*Tweak against background color*/
}

.res-nightmode #header ul.tabmenu li.selected a {
	background: #040406;
	color: #e06935;
}

#header ul.tabmenu li a:hover {
	color: #ff8254;
}

#header-bottom-right a,
#header-bottom-right span {
	color: #def0fe;
}

#header-bottom-right {
	background: #091c2b;
}

#header-bottom-right:hover {
	background: #285281;
}

#header-bottom-right:hover a,
#header-bottom-right:hover span {
	text-shadow: none;
}

#sr-header-area {
	background: #091c2b; /*Tweak to match the image color*/
}

#sr-header-area .sr-list a{
        color: #bce2ea;
}
/*
#sr-header-area .sr-list a:hover{
        background: #e5e5f2;
        color: #19198c;
} */

#sr-header-area .sr-list a:hover{
        background: #091c2b;
        color: #ff8254;
        font-weight: bold;
}
/* -- #M1 - End Header Image ---- */





/* -- #M2 - Submit Buttons ---- */

.sidebox.submit{width:130px;word-spacing:1px;letter-spacing:-1px;}.sidebox.submit-link{position:relative;display:block;margin-left:0;text-indent:0;}.sidebox.submit-link .morelink .nub:before{content:url(%%submitfairies%%);position:relative;top:-10px;margin-left:5px;height:auto;font-weight:700;font-size:10px;text-shadow:1px 1px 1px #fff,1px 1px 2px #808088;z-index:1;}.sidebox.submit-text{position:relative;float:right;margin-top:-40px;text-align:right;}body.res-nightmode .sidebox.submit-link .morelink .nub{display:block!important;}body.res-nightmode .sidebox.submit-link .morelink .nub:before{border:1px solid #222;background-color:#222!important;color:#eee;text-shadow:1px 1px 1px #000,1px 1px 2px #1f1f1f;}body.res-nightmode .sidebox.submit-text{top:-2px;}

/* -- #M2 - End Submit Buttons ---- */


/* -- #M3 - Subscriber Info Switcher ---- */

.titlebox span.word {
	display: none;
}

.titlebox .subscribers .number:after {
	content: " Shipgirls Launching"; /*This is replacement for readers*/
	display:block;
	font-size: 0.6em;
}

.titlebox .users-online .number:after {
	content: " Frontliners"; /*This is replacement for users online*/
	display:block;
	font-size: 0.6em;
}

/* -- #M3 - End Subscriber Info Switcher ---- */


/* -- #M4 - Link Flair Filters ---- */

.side .md > blockquote:nth-of-type(1){position:absolute;top:273px;right:auto;left:27px;z-index:10;border:0!important;background-color:transparent!important;white-space:nowrap;font-size:11px;line-height:1.1;}.side .md > blockquote:nth-of-type(1) p{white-space:normal;font-size:10px;line-height:1.6;margin:5px 0;}.side .md > blockquote:nth-of-type(1) ul{display:inline-block;max-width:100%;list-style-type:none;margin:0;padding:0;}.side .md > blockquote:nth-of-type(1) li{display:inline-block;background-color:transparent;font-weight:700;margin:0 -2px;padding:0;}.side .md > blockquote:nth-of-type(1) li a{display:inline-block;border-style:solid;border-width:0 0 2px;padding:9px;}.res-nightmode .side .md > blockquote:nth-of-type(1) > h1 > a{text-shadow:1px 1px 1px #414141;}



/* Search Page */
html:lang(se) .search-summary,
html:lang(se) .searchpane,
html:lang(rr) .search-summary,
html:lang(rr) .searchpane,
html:lang(pr) .search-summary,
html:lang(pr) .searchpane,
html:lang(bu) .search-summary,
html:lang(bu) .searchpane,
html:lang(ms) .search-summary,
html:lang(ms) .searchpane,
html:lang(nr) .search-summary,
html:lang(nr) .searchpane,
html:lang(dg) .search-summary,
html:lang(dg) .searchpane,
html:lang(iy) .search-summary,
html:lang(iy) .searchpane,
html:lang(ud) .search-summary,
html:lang(ud) .searchpane,
html:lang(ut) .search-summary,
html:lang(ut) .searchpane,
html:lang(ma) .search-summary,
html:lang(ma) .searchpane {
	position: absolute;
	right: 375px;
	left: 0px;
	z-index: 99;
	visibility: hidden;
	margin: -45px 0 0;
	padding: 0;
	text-align: right;
}

html:lang(se) body.search-page #search input[type='text'],
html:lang(rr) body.search-page #search input[type='text'],
html:lang(pr) body.search-page #search input[type='text'],
html:lang(bu) body.search-page #search input[type='text'],
html:lang(ms) body.search-page #search input[type='text'],
html:lang(nr) body.search-page #search input[type='text'],
html:lang(dg) body.search-page #search input[type='text'],
html:lang(iy) body.search-page #search input[type='text'],
html:lang(ud) body.search-page #search input[type='text'],
html:lang(ut) body.search-page #search input[type='text'],
html:lang(ma) body.search-page #search input[type='text'] {
	visibility: visible;
	width: 450px;
	border-color: #8ccbfc;
}
/* ... */

